<resources>
    <string name="app_name">LunchBoxFoodmaker</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="action_settings">Settings</string>
    <string name="sign_in">Sign In</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_up_for_free">Sign Up For Free</string>
    <string name="hint_pass">Password</string>
    <string name="hint_username">Email Address</string>
    <string name="fullname">Full Name</string>
    <string name="email">Email</string>
    <string name="create">Create</string>
    <string name="usercnic">CNIC</string>
    <string name="userphone">Phone Number</string>
    <string name="useraddress">Full Address</string>


    <!--add dish activity-->
    <string name="hint_dishName">Dish Name</string>
    <string name="hint_dishDescription">Dish Description</string>
    <string name="hint_dishPrice">Dish Price</string>


    <string name="registerDish">Add</string>

    <string name="dishCatSpinner">Dish Category</string>

    <string name="hello_blank_fragment">Hello blank fragment Orders</string>
    <string name="default_notification_channel_id">Channel ID</string>
    <string name="nothing_to_display">Nothing To Display</string>
    <string name="title_activity_user_profile">UserProfile</string>
    <string name="title_activity_billing_details">BillingDetails</string>

</resources>
